--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
