--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jose": "^4.13.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
-    "next": "13.2.4",
+    "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
