--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.2.4",
     "jose": "^4.13.1",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^5.2.0",
     "next": "^13.3.0",
     "react": "18.2.0",
