--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "request-ip": "^3.3.0",
     "three": "^0.151.3",
     "typescript": "5.0.3"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/request-ip": "^0.0.37",
     "@types/three": "^0.150.1"
   }
 }
