--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "@types/node": "18.15.11",
         "@types/react": "18.0.33",
         "@types/react-dom": "18.0.11",
+        "cookie": "^0.5.0",
         "cookie-parser": "^1.4.6",
         "cookies": "^0.8.0",
         "dotenv": "^16.0.3",
         "eslint": "8.37.0",
         "eslint-config-next": "13.2.4",
         "jose": "^4.13.1",
+        "js-cookie": "^3.0.1",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "mongodb": "^5.2.0",
@@ -32,6 +34,8 @@
         "typescript": "5.0.3"
     },
     "devDependencies": {
+        "@types/cookie": "^0.5.1",
+        "@types/js-cookie": "^3.0.3",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/request-ip": "^0.0.37",
         "@types/three": "^0.150.1"
